--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,40 @@
 plugins {
   id 'java-library'
+  id 'io.qameta.allure' version '2.11.2'
 }
+
 
 repositories {
   mavenCentral()
 }
 
+allure {
+  report {
+    version.set("2.19.0")
+  }
+  adapter {
+    aspectjWeaver.set(true)
+    frameworks {
+      junit5 {
+        adapterVersion.set("2.19.0")
+      }
+    }
+  }
+}
+
+
+
 dependencies {
+  implementation 'org.junit.jupiter:junit-jupiter:5.8.1'
+  implementation 'org.testng:testng:7.1.0'
   testImplementation (
-      'com.codeborne:selenide:6.16.0',
-      'org.junit.jupiter:junit-jupiter:5.10.0',
-      'com.github.javafaker:javafaker:1.0.2')
+      "com.codeborne:selenide:6.16.0",
+      "org.junit.jupiter:junit-jupiter:5.10.0",
+      'io.qameta.allure:allure-selenide:2.19.0',
+      'com.github.javafaker:javafaker:1.0.2'
+  )
+/*  testRuntimeOnly (
+      "org.slf4j:slf4j-simple:1.7.29")*/
 }
 
 tasks.withType(JavaCompile) {
