--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,23 @@ dependencies {
 tasks.withType(JavaCompile) {
   options.encoding = 'UTF-8'
 }
+tasks.withType(Test) {
+  useJUnitPlatform()
+
+  testLogging {
+    lifecycle {
+      events "started", "skipped", "failed", "standard_error", "standard_out"
+      exceptionFormat "short"
+    }
+  }
+}
+
+
+task jenkins_test(type: Test) {
+  useJUnitPlatform {
+    includeTags("jenkinsTest")
+  }
+}
 
 test {
   useJUnitPlatform()
