--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,8 @@ plugins {
   id 'io.qameta.allure' version '2.11.2'
 }
 
+group 'guru.qa'
+version '1.0'
 
 repositories {
   mavenCentral()
@@ -10,13 +12,13 @@ repositories {
 
 allure {
   report {
-    version.set("2.19.0")
+    version.set("2.21.0")
   }
   adapter {
     aspectjWeaver.set(true)
     frameworks {
       junit5 {
-        adapterVersion.set("2.19.0")
+        adapterVersion.set("2.21.0")
       }
     }
   }
@@ -27,10 +29,11 @@ dependencies {
   implementation 'org.junit.jupiter:junit-jupiter:5.8.1'
   implementation 'org.testng:testng:7.1.0'
   testImplementation(
-      "com.codeborne:selenide:6.16.0",
-      "org.junit.jupiter:junit-jupiter:5.10.0",
-      'io.qameta.allure:allure-selenide:2.19.0',
-      'com.github.javafaker:javafaker:1.0.2'
+      'com.codeborne:selenide:6.16.0',
+      'org.junit.jupiter:junit-jupiter:5.10.0',
+      'io.qameta.allure:allure-selenide:2.21.0',
+      'com.github.javafaker:javafaker:1.0.2',
+      'org.slf4j:slf4j-simple:2.0.9'
   )
 
 }
@@ -43,8 +46,8 @@ compileTestJava {
 }
 
 tasks.withType(Test) {
-  useJUnitPlatform()
   systemProperties(System.getProperties())
+  useJUnitPlatform()
 
   testLogging {
     lifecycle {
