--- a/build.gradle
+++ b/build.gradle
@@ -59,6 +59,7 @@ tasks.withType(Test) {
 
 
 task jenkins_test(type: Test) {
+  systemProperties(System.getProperties())
   useJUnitPlatform {
     includeTags("jenkinsTest")
   }
